# flocksy

./: .gitignore  CMakeLists.txt  README.md  easybuild.sh
include/: box.hpp  boxoffice.hpp  config.hpp  constants.hpp  directory.hpp  dispatcher.hpp  flock_fsm.h  hash.hpp  hash_tree.hpp  heartbeater.hpp  transmitter.hpp
src/: box.cpp  boxoffice.cpp  config.cpp  directory.cpp  hash.cpp  hash_tree.cpp
test/: CMakeLists.txt  config1  config2  config3  flocksy_keystore  flocksy_privatekeys  testMain.cpp  test_directory.cpp  test_hash.cpp  test_hash_tree.cpp  testconfig
